# machine-learning-mushroom

./: Makefile  README.md  main.py  pyproject.toml
notebooks/mushroom/: ex-mushroom.ipynb
