[project]
name = "machine-learning-mushroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
